[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acedrg"
version = "315"
description = "Stereochemical description generator for ligands"
authors = [{ name = "Fei Long", email = "" }]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "rdkit",
    "servalcat",
    "aceDRG-tables @ git+https://github.com/flong-mrc/aceDRG-tables.git"
]

[tool.setuptools]
packages = ["acedrg"]
include-package-data = true

[project.scripts]
acedrg = "acedrg.acedrg:main"
